<resources>
    <string name="app_name">QuickDeal</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_code_verf">Enter Code Verf</string>
    <string name="verify">Verify</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="enter_pass">Enter Pass</string>
    <string name="confirm_pass">Confirm Pass</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me!</string>
    <string name="forgot">Forgot Password?</string>
    <string name="don_t_have_acc">Don’t have acc?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="favorites">favorites</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to">Back to</string>
    <string name="if_you_didn_t_receive_a_code">If you didn’t receive a code,</string>
    <string name="send">Send</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="resend">Resend</string>
    <string name="todo">TODO</string>
    <string name="food_beverages"><![CDATA[Food & Beverages]]></string>
    <string name="electronics">Electronics</string>
    <string name="fashion">Fashion</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="fantastic_deals_and_easy_to_use_app">Fantastic deals and easy to use app</string>
    <string name="theankou">Theankou</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_2_get_1_free">Buy 2 Get 1 Free</string>
    <string name="product_c">Product C</string>
    <string name="product_c_image">Product C Image</string>
    <string name="buy_1_get_1_free">Buy 1 Get 1 Free</string>
    <string name="product_b">Product B</string>
    <string name="product_b_image">Product B Image</string>
    <string name="_25_off">25% off</string>
    <string name="product_a">Product A</string>
    <string name="product_a_image">Product A Image</string>
    <string name="exclusive_discounts">Exclusive Discounts</string>
    <string name="search_for_discounts">Search for discounts</string>
    <string name="_7_eleven">7 Eleven</string>
    <string name="ten11">TEN11</string>
    <string name="profile">Profile</string>
    <string name="food_panda">Food Panda</string>
    <string name="hello_theankou">Hello Theankou!</string>
    <string name="additional_information">Additional Information</string>
    <string name="featured_discounts">Featured Discounts</string>
    <string name="nearby_deals">Nearby Deals</string>
    <string name="share">Share</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="redeem_offer">Redeem Offer</string>
    <string name="food">Food</string>
    <string name="tech">Tech</string>
    <string name="food_discount">Food Discount</string>
    <string name="_50_off">50% off</string>
    <string name="fashion_discount">Fashion Discount</string>
    <string name="_30_off">30% off</string>
    <string name="view_all_discounts">View All Discounts</string>
    <string name="discount_title">Discount Title</string>
    <string name="overall_savings">Overall Savings</string>
    <string name="total_saved">Total Saved</string>
    <string name="_500">$500</string>
    <string name="_10_compared_to_last_month">+10% compared to last month</string>
    <string name="welcome_to_ten_11">Welcome to TEN 11</string>
    <string name="category">Category</string>
    <string name="restaurants">Restaurants</string>
    <string name="suburbs">Suburbs</string>
    <string name="city_center">City Center</string>
    <string name="nearby">Nearby</string>
    <string name="location">Location</string>
    <string name="select_a_category">Select a category</string>
    <string name="travel">Travel</string>
    <string name="discounted_businesses">Discounted Businesses</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="more_discounts">More Discounts</string>
    <string name="tech_haven">Tech Haven</string>
    <string name="_10_off_all_gadgets">10% off all gadgets</string>
    <string name="ends_in_3_days">Ends in 3 days</string>
    <string name="buy_2_get_1_free_on_all_accessories">Buy 2 Get 1 Free on all accessories</string>
    <string name="chic_boutique">Chic Boutique</string>
    <string name="limited_stock">Limited stock</string>
    <string name="discount_details">Discount Details</string>
    <string name="share_deal">Share Deal</string>
    <string name="view_related_deals">View Related Deals</string>
    <string name="rating_stars">Rating Stars</string>
    <string name="username">Username</string>
    <string name="review_message_goes_here">Review message goes here</string>
    <string name="review_message_here">Review message here</string>
    <string name="user_reviews">User Reviews</string>
    <string name="related_deals">Related Deals</string>
    <string name="product_image">Product Image</string>
    <string name="discount_percentage_35">Discount Percentage: 35%</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="claim_limited_time_discount">Claim Limited Time Discount!</string>
    <string name="user_profile">User Profile</string>
    <string name="theankou1">Theankou!</string>
    <string name="discount_lover">Discount Lover</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="set_your_preferred_choices_for_better_discounts">Set your preferred choices for better discounts.</string>
    <string name="order_history">Order History</string>
    <string name="brands">Brands</string>
    <string name="saved_discounts">Saved Discounts</string>
    <string name="_50_off_electronics">50% off Electronics</string>
    <string name="expires_on_28_02_2025">Expires on 28/02/2025</string>
    <string name="code_save50">Code: SAVE50</string>
    <string name="buy_1_get_1_free_at_burger_king">Buy 1 Get 1 Free at Burger King</string>
    <string name="expires_on_10_01_2025">Expires on 10/01/2025</string>
    <string name="in_store_only">In-store only</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="customize_your_notification_preferences">Customize your notification preferences.</string>
    <string name="preferences">Preferences</string>
    <string name="your_cart">Your Cart</string>
    <string name="discount_10">Discount 10%</string>
    <string name="latest_smartphone">Latest Smartphone</string>
    <string name="_699_99">$699.99</string>
    <string name="items_total">Items Total</string>
    <string name="_0_00">$0.00</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="_4">4</string>
    <string name="cart_summary">Cart Summary</string>
    <string name="products_in_your_cart">Products in Your Cart</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
</resources>