<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newpasswrod">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/welcome_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/enter_new_password"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/enter_pass"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/background_email"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/com_pass"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/background_email"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_pass" />


    <Button
        android:id="@+id/btn_verify"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="151dp"
        android:backgroundTint="#6C63FF"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/send"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/com_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>