<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="388dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Discount Tag -->
        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#DDDDDD"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:padding="4dp"
            android:text="@string/discount_10"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_margin="4dp" />

        <!-- Product Image -->
        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/product_image" />

        <!-- Product Info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="#FAFAFA">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_smartphone"
                android:textColor="#000000"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_699_99"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                android:layout_marginTop="4dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
