<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singup">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_singup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/sing_up"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/fullnameSingup"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@drawable/background_email"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/enter_name"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="#666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/email_singup"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:autofillHints=""
        android:background="@drawable/background_email"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="#666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameSingup" />

    <EditText
        android:id="@+id/password_singup"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:autofillHints=""
        android:background="@drawable/background_email"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_singup" />

    <EditText
        android:id="@+id/cpassword_singup"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:autofillHints=""
        android:background="@drawable/background_email"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_singup" />

    <Button
        android:id="@+id/button_singup"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#6C63FF"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/sing_up"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpassword_singup" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_singup">

        <TextView
            android:id="@+id/have_acc_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/already_have_account"
            android:textColor="#ABA5A5"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="13sp" />

    </LinearLayout>



    <ProgressBar
        android:id="@+id/pb_login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>