<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/card_clim" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:text="@string/discount_title"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewDiscount"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:text="@string/_30_off"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
