<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="175dp"
    android:layout_height="116dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_marginEnd="10dp"
    android:elevation="4dp"
    app:cardCornerRadius="6dp"
    android:background="@drawable/rounded_background_user">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/rate_star"/>
    </LinearLayout>

    <TextView
        android:id="@+id/user_comment"
        android:layout_width="152dp"
        android:layout_height="60dp"
        android:text="@string/review_message_here"
        android:textSize="16sp"/>
</LinearLayout>
