<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="136dp"
    android:layout_margin="8dp"
    android:backgroundTint="#F6F6F6"
    android:elevation="4dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageProfile"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rate_star"
                android:contentDescription="@string/rating_stars" />
        </LinearLayout>

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:text="@string/review_message_goes_here"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
